# genai-alfabank-ghostwriter-bot

./: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
src/: catalog.py  generator.py  prompt.py  settings.py  stylizer.py  web.py
